Added direct current and nottingham evaluation

--- a/currents_and_nottingham_plotting.ipynb
+++ b/currents_and_nottingham_plotting.ipynb
@@ -14,10 +14,10 @@
     "import time\n",
     "\n",
     "%matplotlib inline\n",
-    "mp.rcParams['axes.linewidth'] = 1.0\n",
-    "mp.rcParams['lines.linewidth'] = 1.0\n",
-    "mp.rcParams['patch.linewidth'] = 1.0\n",
-    "mp.rcParams.update({'font.size': 10})"
+    "mp.rcParams['axes.linewidth'] = 1.5\n",
+    "mp.rcParams['lines.linewidth'] = 1.5\n",
+    "mp.rcParams['patch.linewidth'] = 1.5\n",
+    "#mp.rcParams.update({'font.size': 10})"
    ]
   },
   {
@@ -40,7 +40,8 @@
     "\n",
     "import jensen_gtf_nottingham as jensen\n",
     "import fowler_nordheim_current as fn\n",
-    "import richardson_current as richardson"
+    "import richardson_current as richardson\n",
+    "import direct_current_nottingham as direct"
    ]
   },
   {
@@ -57,7 +58,8 @@
     "print('%.3e'%jensen.j(F, T, phi))\n",
     "print('%.3e'%fn.j(F, phi))\n",
     "print('%.3e'%fn.j_temp(F, T, phi))\n",
-    "print('%.3e'%richardson.j(F, T, phi))"
+    "print('%.3e'%richardson.j(F, T, phi))\n",
+    "print('%.3e'%direct.j(F, T, phi))"
    ]
   },
   {
@@ -75,7 +77,7 @@
    },
    "outputs": [],
    "source": [
-    "tic=time.time()\n",
+    "tic0=time.time()\n",
     "plt.figure(figsize=(10, 7))\n",
     "T_data = [1300.0, 800.0]\n",
     "fs = 10**np.arange(-1.0, 1.0, 0.01)\n",
@@ -87,7 +89,12 @@
     "    \n",
     "    j_jensen = [jensen.j(f, T, phi) for f in fs]\n",
     "    plt.plot(fs, j_jensen, '-', label=\"Jensen $%d$K\"%T,zorder=4)\n",
-    "\n",
+    "    \n",
+    "    tic1=time.time()\n",
+    "    j_direct = [direct.j(f, T, phi) for f in fs]\n",
+    "    plt.plot(fs, j_direct, '-', label=\"direct $%d$K\"%T,zorder=4)\n",
+    "    print(\"direct time: %f\"%(time.time()-tic1))\n",
+    "    \n",
     "j_fn = [fn.j(f, phi) for f in fs]\n",
     "plt.plot(fs, j_fn, 'k--', label=\"Fowler-Nordheim\",zorder=4)\n",
     "\n",
@@ -100,7 +107,7 @@
     "\n",
     "plt.savefig('./fig/emission_currents.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(\"Time taken: %f\"%(time.time()-tic))"
+    "print(\"Total time: %f\"%(time.time()-tic0))"
    ]
   },
   {
@@ -120,7 +127,7 @@
    },
    "outputs": [],
    "source": [
-    "tic=time.time()\n",
+    "tic0=time.time()\n",
     "plt.figure(figsize=(10, 7))\n",
     "F_data = [4.0, 8.0]\n",
     "ts = np.arange(200, 4200, 10)\n",
@@ -129,7 +136,12 @@
     "for F in F_data:\n",
     "    de_jensen = [jensen.deltaE(F, t, phi) for t in ts]\n",
     "    plt.plot(ts, de_jensen, '-', label=\"Jensen %d GV/m\"%F,zorder=4)\n",
-    "\n",
+    "    \n",
+    "    tic1=time.time()\n",
+    "    de_direct = [direct.deltaE(F, t, phi) for t in ts]\n",
+    "    plt.plot(ts, de_direct, '-', label=\"direct %d GV/m\"%F,zorder=4)\n",
+    "    print(\"direct time: %f\"%(time.time()-tic1))\n",
+    "    \n",
     "plt.xlabel(\"Temperature (K)\")\n",
     "plt.ylabel(\"delta E (eV)\")\n",
     "plt.axis((300,4200, -0.4, 2.4))\n",
@@ -138,7 +150,7 @@
     "\n",
     "plt.savefig('./fig/nottingham_de.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(\"Time taken: %f\"%(time.time()-tic))"
+    "print(\"Total time: %f\"%(time.time()-tic0))"
    ]
   },
   {
